<resources>
    <string name="app_name">SuitGame</string>
    <string name="tv_batu">BATU</string>
    <string name="tv_gunting">GUNTING</string>
    <string name="tv_kertas">KERTAS</string>
    <string name="tv_player_score">0</string>
    <string name="tv_score">SCORE</string>
    <string name="tv_com_score">0</string>
    <string name="tv_player">Player 1</string>
    <string name="tv_com">Com</string>
    <string name="text_result_draw">DRAW!</string>
    <string name="text_result_player_win">PLAYER WINS!</string>
    <string name="text_result_com_win">COM WINS!</string>
    <string name="tv_vs">VS</string>
    <string name="text_game_over">GAME OVER</string>
    <string name="text_com_wins">COM WINS!</string>
    <string name="text_you_win">YOU WIN!</string>
    <string name="tv_title_tutorial">GAME TUTORIAL</string>
    <string name="tv_winning_condition">Winning Condition:</string>
    <string name="tv_winning_score">Score 3 first to win the game.</string>
    <string name="tv_rules">Rules:</string>
    <string name="tv_beats">Beats</string>
    <string name="tv_got_it">Ok, Got It!</string>
    <string name="tv_winner_player">PLAYER 1 WINS!</string>
    <string name="tv_winner_com">COMPUTER WINS!</string>
    <string name="tv_play_again">Play Again</string>
    <string name="tv_back_home">Back to Home</string>
    <string name="text_starting">Game is Starting...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_game_modes">Game Modes</string>
    <string name="text_your_name">Your Name</string>
    <string name="btn_confirm">Confirm</string>
    <string name="text_previous">Previous</string>
    <string name="text_next">Next</string>
    <string name="text_player_2">Player 2</string>
    <string name="btn_next_round">Next Round</string>
    <string name="text_player_two_wins">PLAYER 2 WINS!</string>
    <string name="text_choose_mode">Please Choose Mode :</string>
    <string name="text_hello">Hello, </string>
    <string name="text_pvp">PLAYER VS PLAYER</string>
    <string name="text_pvc">PLAYER VS COMPUTER</string>
    <string name="text_back_to_mode">Back to Mode</string>
    <string name="tv_dismiss">Dismiss</string>
    <string name="text_enter_name">Please Enter Your Name</string>
    <string name="text_next_round">NEXT ROUND</string>
    <string name="text_player1_turn">Player 1 Turn</string>
    <string name="text_player2_turn">Player 2 Turn</string>
    <string name="text_player_1_win">Player 1 Win!</string>
    <string name="text_player_2_win">Player 2 Win!</string>
    <string name="text_game_reset">Game Reset Successfully!</string>
    <string name="text_back_home">Back to Home</string>
    <string name="text_p1_win">PLAYER 1 WIN!</string>
    <string name="text_p2_win">PLAYER 2 WIN!</string>
    <string name="text_pvc_starting">Player vs Computer Mode Starting...</string>
    <string name="text_pvp_starting">Player vs Player Mode Starting...</string>
</resources>