<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_yellow"
    tools:context=".ui.fragment.FormFragment">

    <TextView
        android:id="@+id/tv_enter_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_enter_name"
        android:fontFamily="@font/font_vt323"
        android:textAlignment="center"
        android:textSize="@dimen/_26ssp"
        android:textColor="@color/dark_blue"
        android:layout_marginTop="@dimen/_35sdp"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/iv_user"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:src="@drawable/ic_user"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_70sdp"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:inputType="text"
        android:gravity="center"
        android:maxLines="1"
        android:background="@drawable/bg_rounded_white_15dp"
        app:layout_constraintTop_toBottomOf="@id/iv_user"
        android:fontFamily="@font/font_vt323"
        android:hint="@string/text_your_name"
        android:textSize="@dimen/_16ssp"
        android:layout_marginHorizontal="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_40sdp"/>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_50sdp"
        android:backgroundTint="@color/orange"
        android:text="@string/btn_confirm"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_50sdp"/>





</androidx.constraintlayout.widget.ConstraintLayout>