<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SplashScreenActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_yellow"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:id="@+id/ll_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_60sdp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingTop="@dimen/_20sdp"
        android:paddingRight="@dimen/_20sdp"
        android:paddingBottom="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_r"
            style="@style/Text.25.middle_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_batu"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <TextView
            android:id="@+id/tv_p"
            style="@style/Text.25.middle_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:gravity="center"
            android:text="@string/tv_gunting"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_r">

        </TextView>

        <TextView
            android:id="@+id/tv_s"
            style="@style/Text.25.middle_blue"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_height="wrap_content"
            android:text="@string/tv_kertas"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_p">

        </TextView>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_rcs"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:src="@drawable/ic_splash_screen"
        app:layout_constraintTop_toBottomOf="@id/ll_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <ProgressBar
        android:indeterminateTint="@color/dark_orange"
        android:id="@+id/pb_splash_screen"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_100sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_50sdp"/>

    <TextView
        android:id="@+id/tv_starting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pb_splash_screen"
        android:text="@string/text_starting"
        android:textSize="@dimen/_20ssp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/font_vt323"
        android:textAlignment="center"/>


</androidx.constraintlayout.widget.ConstraintLayout>