<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_wallpaper"
    tools:context=".ui.menu.MenuActivity">

    <LinearLayout
        android:id="@+id/ll_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_vt323"
            android:text="@string/text_hello"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_30ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_vt323"
            android:textColor="@color/dark_blue"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="@dimen/_30ssp"
            android:textStyle="bold"
            tools:text="Player 1" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_choose_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:fontFamily="@font/font_vt323"
        android:text="@string/text_choose_mode"
        android:textAlignment="center"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/_26ssp"
        app:layout_constraintTop_toBottomOf="@id/ll_welcome"/>

    <LinearLayout
        android:id="@+id/ll_pvp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_35sdp"
        android:background="@drawable/selector_modes"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_mode">

        <ImageView
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_45sdp"
            android:src="@drawable/ic_player_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:fontFamily="@font/font_vt323"
            android:text="@string/text_pvp"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_18ssp" />

        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:src="@drawable/ic_player_2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_pvc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_35sdp"
        android:background="@drawable/selector_modes"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_pvp">

        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:src="@drawable/ic_player_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:fontFamily="@font/font_vt323"
            android:text="@string/text_pvc"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_18ssp" />

        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:src="@drawable/ic_robot" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>