<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_back"
        android:layout_marginBottom="-30dp"
        android:background="@color/light_yellow"/>

    <TextView
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Back To : "
        android:textAlignment="center"
        android:background="@color/orange"
        android:fontFamily="@font/font_vt323"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/_24ssp"
        android:paddingVertical="@dimen/_5sdp"
        android:textStyle="bold"
        android:id="@+id/tv_title"
        />

    <TextView
        android:id="@+id/tv_back_to_mode"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/font_vt323"
        android:textSize="@dimen/_20ssp"
        android:background="@drawable/bg_bottom_right_shadow"
        android:textColor="@color/white"
        android:paddingHorizontal="@dimen/_28sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:paddingTop="@dimen/_3sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/_50sdp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="@string/text_back_to_mode"/>

    <TextView
        android:id="@+id/tv_dismiss"
        app:layout_constraintTop_toBottomOf="@id/tv_back_to_mode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/font_vt323"
        android:textSize="@dimen/_20ssp"
        android:background="@drawable/bg_bottom_right_shadow"
        android:textColor="@color/white"
        android:paddingHorizontal="@dimen/_28sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:paddingTop="@dimen/_3sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_marginHorizontal="@dimen/_50sdp"
        android:layout_height="wrap_content"
        android:text="@string/tv_back_home"/>

    <TextView
        android:id="@+id/tv_back"
        app:layout_constraintTop_toBottomOf="@id/tv_dismiss"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/font_vt323"
        android:textSize="@dimen/_20ssp"
        android:background="@drawable/bg_bottom_right_shadow"
        android:textColor="@color/white"
        android:paddingHorizontal="@dimen/_28sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:paddingTop="@dimen/_3sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_marginHorizontal="@dimen/_70sdp"
        android:layout_height="wrap_content"
        android:text="@string/tv_dismiss"/>

</androidx.constraintlayout.widget.ConstraintLayout>